Fix select2 results z-index issue for newsletter editor

--- a/assets/css/src/newsletter_editor/libraryOverrides.styl
+++ b/assets/css/src/newsletter_editor/libraryOverrides.styl
@@ -1,6 +1,6 @@
 /* Fix select2 z-index to work with MailPoet.Modal */
 .select2-dropdown
-  z-index: 101000
+  z-index: 101000 !important
 
 /* Remove input field styles from select2 type input */
 .select2-container
